2004-05-13  James Turner  <james@worldforge.org>

        * Eris/World.h, Eris/World.cpp: Add a GotTime signal, and emit it
          in response to sight(entity), sight(move) and sight(set). This
          entailed using SignalDispatcher2 in a few more places.

2004-05-04  Al Riddoch  <alriddoch@zepler.org>

	* Eris/TypeDispatcher.h, Eris/Dispatcher.cpp: Add new dispatcher
	  that deals with objtype being "object" or "obj".

	* Eris/Connection.cpp, Eris/Lobby.cpp, Eris/World.cpp: Use the
	  new dispatcher so we can talk to Atlas-C++ 0.6.

2004-04-19  Al Riddoch  <alriddoch@zepler.org>

	* Eris/PollDefault.cpp: Ensure that flags don't get broken
	  if exception gets thrown in PollDefault::poll by catching
	  and rethrowing.

2004-03-06  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Entity.cpp, Eris/Entity.h: Make getProperty() member function
	  const.

2004-03-04  Al Riddoch  <alriddoch@zepler.org>

	* Bump the interface version so runtime libs for transitional
	  don't interfere with stable.

	* Eris/Metaserver.cpp, Eris/Metaserver.h: Add compatability calls
	  with development Eris so we can push ahead with UI features
	  to test development Eris.

Thursday, 5th February 2004, Al Riddoch <alriddoch@zepler.org>

	* Update dependencies and header list in the rpm spec.

	* Add a few EXTRA_DIST files, include spec, and pgxproj files.

	* Release 1.1.1, interface version 1.0.0

Thursday, 5th February 2004, James Turner

    * Fix duplicate characters in the Player's list, by discarding
      duplicate SIGHTs and locking out calls to refreshCharacterInfo while
      a refresh is already in progress
    * Switch the internal character storage to be a map, keyed by entity ID,
      and make the accessor method (Player::getCharacters()) return a
      const reference.
    * Various other whitespace changes in Player.cpp
    * Bump version to 1.1.1 in anticipation of release
    * Set required WFMath version to 0.3.3 for coordinate conversion helpers
    