@@ -1,3 +1,9 @@
+2004-05-15  James Turner  <james@worldforge.org>
+
+        * Eris/World.cpp, Eris/World.h, Eris/SignalDispatcher.h: Fix how 
+          SIGHT(CREATE) is handled, so the value we emit via GotTime
+          is correct. This entailed adding a SignalDispatcher3<> template.
+
 2004-05-13  James Turner  <james@worldforge.org>
 
         * Eris/World.h, Eris/World.cpp: Add a GotTime signal, and emit it
